src/styles/components/_case-file-modal.scss
.case__files_modal {
  padding: 1rem;

  &_close-button {
    position: absolute;
    top: 0.5rem;
    right: 1rem;
    font-family: 'Barlow';
    font-weight: 600;
    font-size: 2.5rem;
    line-height: 100%;
    color: $color-carbon;
    z-index: 2;
  }
}

